# semcode

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  blog-improvements.md  blog.md  config.yaml  docker-compose.yaml  pyproject.toml
.ai/plans/: 2026-06-02-rag-system-documentation.md
.claude/: CLAUDE.md  settings.json
.claude/agents/: developer.md  reviewer.md  security-engineer.md  test-engineer.md
.claude/rules/: fastmcp-http.md  python.md  testing.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: README.md  configuration.md  dense-vectors.md  ingestion.md  retrieval-rrf.md  sparse-vectors.md
eval/: __main__.py  matching.py  metrics.py  runner.py
eval/datasets/: queries.yaml  queries_html_css.yaml
eval/results/: queries-baseline-2026-05-01-223517.json  queries-rerank-2026-05-01-223551.json  queries-rerank-2026-05-01-223643.json  queries-rerank-2026-05-01-224141.json  queries-rerank-2026-05-01-225609.json  queries-rerank-2026-05-01-230806.json
presentation/: semcode-rag.excalidraw
scripts/: seed_test_cases.py
server/: config.py  main.py  state.py
server/embeddings/: __init__.py  bm25.py  code_tokenizer.py  factory.py  jina.py  jina_api.py  ollama.py  openai.py  voyage.py
server/indexer/: cleanup.py  git_history.py  github_source.py  pipeline.py
server/parser/: _spring_annotations.py  base.py  bash.py  c.py  compose.py  cpp.py  csharp.py  css_parser.py  dart.py  dockerfile.py  go.py  html_parser.py  java.py  json_parser.py  kotlin.py  lua.py  markdown.py  php.py  python.py  r.py  registry.py  ruby.py  rust.py  scala.py  sql.py  swift.py  tree_sitter_compat.py  typescript.py  xml_parser.py
server/prompts/: service.py  system.py
server/rerank/: base.py  noop.py  tei_reranker.py
server/routes/: reindex.py
server/store/: commit_store.py  qdrant.py
server/tools/: admin.py  history.py  index.py  search.py  stats.py
tests/: test_cleanup.py  test_code_tokenizer.py  test_config.py  test_eval_smoke.py  test_git_history.py  test_github_source.py  test_pipeline.py  test_reindex_route.py  test_store.py
tests/embeddings/: test_factory.py  test_jina.py  test_jina_api.py  test_ollama.py  test_openai.py  test_voyage.py
(+46 files in other folders)
