[project]
name = "semcode"
version = "1.0.0"
description = "MCP server for semantic code search across microservices codebases"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.5.0",
    "qdrant-client>=1.13.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-dockerfile>=0.2.0",
    "tree-sitter-markdown>=0.3.0",
    "tree-sitter-json>=0.24.0",
    "tree-sitter-html>=0.23.0",
    "tree-sitter-css>=0.23.0",
    "tree-sitter-xml>=0.7.0",
    "tree-sitter-yaml>=0.6.0",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-c-sharp>=0.23.0",
    "tree-sitter-c>=0.24.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-ruby>=0.23.0",
    "tree-sitter-php>=0.24.0",
    "tree-sitter-kotlin>=1.1.0",
    "tree-sitter-scala>=0.26.0",
    "tree-sitter-swift>=0.7.0",
    "tree-sitter-bash>=0.25.0",
    "tree-sitter-sql>=0.3.0",
    "tree-sitter-lua>=0.5.0",
    "tree-sitter-language-pack>=1.5.0,<1.6.0",
    "pydantic-settings>=2.14.0",
    "pyyaml>=6.0",
    "httpx>=0.28.0",
    "fastembed>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
